# knowledge-platform

./: .gitignore  LICENSE  artifacthub-repo.yml
.github/workflows/: chart.yaml  ci.yaml  helm.yaml
apps/ingestion-worker/: .env.tpl  Dockerfile  pyproject.toml
apps/ingestion-worker/src/ingestion/: cli.py  config.py  github_client.py  indexer.py  init.py  orchestrator.py  parser.py  server.py
apps/mcp-server/: Dockerfile  package-lock.json  package.json
apps/mcp-server/src/: index.ts  sse-server.ts
charts/: index.yaml  knowledge-platform-0.1.0.tgz
charts/knowledge-platform/: .helmignore  Chart.yaml  values.yaml
charts/knowledge-platform/charts/: meilisearch-0.19.0.tgz
charts/knowledge-platform/templates/: _helpers.tpl  ingestion-worker-deployment.yaml  ingestion-worker-ingress.yaml  ingestion-worker-service.yaml  ingestion-worker-serviceaccount.yaml  mcp-server-deployment.yaml  mcp-server-service.yaml  mcp-server-serviceaccount.yaml  secrets.yaml  serviceaccount.yaml
